--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>App</artifactId>
-    <packaging>pom</packaging>
+
     <version>1.0-SNAPSHOT</version>
 
     <modules>
@@ -14,6 +14,11 @@
         <module>api</module>
         <module>service</module>
     </modules>
-
+    <packaging>pom</packaging>
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
 </project>
